# pipeExample

./: Pipes.lyx  pipeExample.cabal  presult0  result0  result20  resultN  stack.yaml
Lib/: MonadTransformer.hs  NoPipe.hs  NoPipeUsingUniform.hs  PipeUsingUniform.hs  WithPipe.hs
src/: CollectAll.hs  TestMain.hs
