name: pipeExample
version: 0.0.1
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: example for pipe use
description: collect md5 for all files on disk 


author: Andrew U. Frank

library
    build-depends:
       base -any
        , HTF
    exposed-modules:
        Lib.NoPipe



executable typeFamilyExample
    main-is:    CollectAll.hs
    build-depends: base
        , pipeExample

    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:

Test-Suite typeFamilyAuto
    type:       exitcode-stdio-1.0
    main-is:    TestMain.hs
    build-depends: base, HTF
        , pipeExample
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:

