name: pipeExample
version: 0.0.1
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: example for pipe use
description: collect md5 for all files on disk


author: Andrew U. Frank

library
    build-depends:
       base -any
        , HTF
        , directory
        , unix
        , filepath
        , pureMD5
        , safe
        , bytestring
        , containers
        , monads-tf
        , pipes ==4.3.3
        --
        , uniform-strings
        , uniform-error
        , uniform-fileio

    default-language: Haskell2010
    exposed-modules:
        Lib.NoPipe
        Lib.MonadTransformer
        Lib.WithPipe
        Lib.NoPipeUsingUniform



executable collect
    main-is:    CollectAll.hs
    build-depends: base
        , pipeExample

    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:

Test-Suite pipeAuto
    type:       exitcode-stdio-1.0
    main-is:    TestMain.hs
    build-depends: base, HTF
        , pipeExample
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:

